test/rewriter/errors/pat_unsupported_record_field.ml
let unsupported_record_field = function
  | [%yojson? {A.field = 0}] -> false
  | _ -> true
